# tic_tac_toe

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  run.sh  tic_tac_toe.pro
hdr/: defines.h
ttt_backend/: CMakeLists.txt  ttt_backend.pro
ttt_backend/hdr/: action.h  alpha_beta.h  analyser.h  dispatcher.h  engine.h  min_max.h  move_algorithm.h  pitch.h  server.h
ttt_backend/src/: action.cpp  alpha_beta.cpp  analyser.cpp  dispatcher.cpp  engine.cpp  main.cpp  min_max.cpp  move_algorithm.cpp  pitch.cpp  server.cpp
ttt_frontend/: CMakeLists.txt  ttt_frontend.pro
ttt_frontend/hdr/: field.h  front_win.h  session_handler.h  socket.h
ttt_frontend/src/: field.cpp  front_win.cpp  main.cpp  session_handler.cpp  socket.cpp
ttt_lib/: CMakeLists.txt
ttt_lib/hdr/: helper.h
ttt_lib/src/: helper.cpp
